deploy: b9f9095cb681e63ff6a955c02b74eb4f9421472f

--- a/html/404.html
+++ b/html/404.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4476">
+  <link rel="stylesheet" href="../css/main.css?v=2383">
 </head>
 
 <body class="page">
@@ -182,9 +182,31 @@
   </div>
 </header>
 
-<div class="page__content">
+<main class="page__content">
 
-</div>
+<section class="error-template">
+  <div class="container-medium">
+    <div class="error-template__container">
+      <div class="error-template__content">
+        <h1 class="error-template__title">Страница не найдена</h1>
+        <p class="error-template__text">Такой страницы больше не существует</p>
+        <div class="error-template__action">
+          <a class="error-template__btn" href="#">Перейти на главную</a>
+        </div>
+      </div>
+      <div class="error-template__image">
+          <picture>
+        
+        
+            <source data-srcset="../assets/images/404/error.png" type="image/png">
+            <img class="lazy" data-sizes="auto" data-original="../assets/images/404/error.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt>
+          </picture>
+      </div>
+    </div>
+  </div>
+</section>
+
+</main>
 
 <footer class="page__footer footer">
   <div class="footer__top">
@@ -256,7 +278,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4476" defer></script>
-  <script src="../js/main.js?v=4476" defer></script>
+<script src="../js/vendors.js?v=2383" defer></script>
+  <script src="../js/main.js?v=2383" defer></script>
 </body>
 </html>
