--- a/html/basement.html
+++ b/html/basement.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4476">
+  <link rel="stylesheet" href="../css/main.css?v=2383">
 </head>
 
 <body class="page">
@@ -182,7 +182,7 @@
   </div>
 </header>
 
-<div class="page__content">
+<main class="page__content">
 
   <br>
   <br>
@@ -205,7 +205,7 @@
   <br>
   <br>
 
-</div>
+</main>
 
 <footer class="page__footer footer">
   <div class="footer__top">
@@ -277,7 +277,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4476" defer></script>
-  <script src="../js/main.js?v=4476" defer></script>
+<script src="../js/vendors.js?v=2383" defer></script>
+  <script src="../js/main.js?v=2383" defer></script>
 </body>
 </html>
