--- a/html/events-single.html
+++ b/html/events-single.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4476">
+  <link rel="stylesheet" href="../css/main.css?v=2383">
 </head>
 
 <body class="page">
@@ -182,7 +182,7 @@
   </div>
 </header>
 
-<div class="page__content">
+<main class="page__content">
 <main class="internal-template">
   <div class="container-small">
     <div class="internal-template__container">
@@ -201,7 +201,7 @@
     </div>
   </div>
 </main>
-</div>
+</main>
 
 <footer class="page__footer footer">
   <div class="footer__top">
@@ -273,7 +273,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4476" defer></script>
-  <script src="../js/main.js?v=4476" defer></script>
+<script src="../js/vendors.js?v=2383" defer></script>
+  <script src="../js/main.js?v=2383" defer></script>
 </body>
 </html>
