--- a/html/index.html
+++ b/html/index.html
@@ -340,7 +340,7 @@
           <article class="main__article">
             <h2 class="main__title">Контакты</h2>
             <a class="main__link" href="contacts.html" title="Контакты" aria-label="Link to Контакты page.">
-              <img src="../.meta/03_contacts.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/04_contacts.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -348,7 +348,7 @@
           <article class="main__article">
             <h2 class="main__title">Каталог товаров</h2>
             <a class="main__link" href="shop.html" title="Каталог товаров" aria-label="Link to Каталог товаров page.">
-              <img src="../.meta/04_shop.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/05_shop.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -356,7 +356,7 @@
           <article class="main__article">
             <h2 class="main__title">Каталог товаров / Категория (группа)</h2>
             <a class="main__link" href="shop--category-group.html" title="Каталог товаров / Категория (группа)" aria-label="Link to Каталог товаров / Категория (группа) page.">
-              <img src="../.meta/05_shop--category-group.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/06_shop--category-group.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -364,15 +364,7 @@
           <article class="main__article">
             <h2 class="main__title">Каталог товаров / Категория товара</h2>
             <a class="main__link" href="shop--category-single.html" title="Каталог товаров / Категория товара" aria-label="Link to Каталог товаров / Категория товара page.">
-              <img src="../.meta/06_shop--category-single.jpg" alt="Preview image." loading="lazy">
-            </a>
-          </article>
-        </li>
-        <li class="main__item">
-          <article class="main__article">
-            <h2 class="main__title">Каталог товаров / Товар</h2>
-            <a class="main__link" href="shop--product.html" title="Каталог товаров / Товар" aria-label="Link to Каталог товаров / Товар page.">
-              <img src="../.meta/07_shop--product.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/07_shop--category-single.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -386,9 +378,17 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Каталог товаров / Товар</h2>
+            <a class="main__link" href="shop--product.html" title="Каталог товаров / Товар" aria-label="Link to Каталог товаров / Товар page.">
+              <img src="../.meta/09_shop--product.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">Мастер классы</h2>
             <a class="main__link" href="events.html" title="Мастер классы" aria-label="Link to Мастер классы page.">
-              <img src="../.meta/09_events.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/10_events.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -396,7 +396,7 @@
           <article class="main__article">
             <h2 class="main__title">Мастер классы / Событие</h2>
             <a class="main__link" href="events-single.html" title="Мастер классы / Событие" aria-label="Link to Мастер классы / Событие page.">
-              <img src="../.meta/10_events-single.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/11_events-single.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -404,7 +404,7 @@
           <article class="main__article">
             <h2 class="main__title">Блог</h2>
             <a class="main__link" href="blog.html" title="Блог" aria-label="Link to Блог page.">
-              <img src="../.meta/11_blog.jpg" alt="Preview image." loading="lazy">
+              <img src="../.meta/12_blog.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -412,15 +412,7 @@
           <article class="main__article">
             <h2 class="main__title">Блог / Новость</h2>
             <a class="main__link" href="blog-single.html" title="Блог / Новость" aria-label="Link to Блог / Новость page.">
-              <img src="../.meta/12_blog-single.jpg" alt="Preview image." loading="lazy">
-            </a>
-          </article>
-        </li>
-        <li class="main__item">
-          <article class="main__article">
-            <h2 class="main__title">404</h2>
-            <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
-              <img src="../.meta/13_404.png" alt="Preview image." loading="lazy">
+              <img src="../.meta/13_blog-single.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -432,13 +424,21 @@
             </a>
           </article>
         </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">404</h2>
+            <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
+              <img src="../.meta/15_404.png" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
       </ul>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 3:24 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 7:21 PM</span></span>
     </div>
   </footer>
 </div>
