--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4476">
+  <link rel="stylesheet" href="../css/main.css?v=2383">
 </head>
 
 <body class="page">
@@ -182,7 +182,7 @@
   </div>
 </header>
 
-<div class="page__content">
+<main class="page__content">
 
 <main class="home-container">
   <section class="home-intro">
@@ -924,7 +924,7 @@
   </div>
 </div>
 
-</div>
+</main>
 
 <footer class="page__footer footer">
   <div class="footer__top">
@@ -996,7 +996,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4476" defer></script>
-  <script src="../js/main.js?v=4476" defer></script>
+<script src="../js/vendors.js?v=2383" defer></script>
+  <script src="../js/main.js?v=2383" defer></script>
 </body>
 </html>
