--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4476">
+  <link rel="stylesheet" href="../css/main.css?v=2383">
 </head>
 
 <body class="page">
@@ -182,8 +182,8 @@
   </div>
 </header>
 
-<div class="page__content">
-<main class="internal-template">
+<main class="page__content">
+<section class="internal-template">
   <div class="container-small">
     <div class="internal-template__container">
       <div class="internal-template__breadcrumbs">
@@ -196,7 +196,7 @@
         <h1 class="internal-template__title internal-template__title--big">Политика конфиденциальности</h1>
       </div>
       <div class="internal-template__content">
-        <section class="privacy-policy">
+        <article class="privacy-policy">
           <h2>Политика в отношении обработки персональных данных</h2>
         
           <h3>1. Общие положения</h3>
@@ -346,11 +346,11 @@
             <li>Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу
               <a href="https://сибхц.рф/privacy-policy/">https://сибхц.рф/privacy-policy/</a>.</li>
           </ol>
-        </section>      </div>
+        </article>      </div>
     </div>
   </div>
+</section>
 </main>
-</div>
 
 <footer class="page__footer footer">
   <div class="footer__top">
@@ -422,7 +422,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4476" defer></script>
-  <script src="../js/main.js?v=4476" defer></script>
+<script src="../js/vendors.js?v=2383" defer></script>
+  <script src="../js/main.js?v=2383" defer></script>
 </body>
 </html>
