deploy: f286528cc3d035c372fd91bbb0cac608938044c7

--- a/html/index.html
+++ b/html/index.html
@@ -438,7 +438,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">November 1, 2020, 3:18 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">November 2, 2020, 1:12 AM</span></span>
     </div>
   </footer>
 </div>
