deploy: 5353d10beeddc56b1ce296b4e1fb249406577ba5

--- a/html/shop--product.html
+++ b/html/shop--product.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=1726">
+  <link rel="stylesheet" href="../css/main.css?v=1513">
 </head>
 
 <body class="page">
@@ -196,8 +196,8 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#">Категория товара <i class="icon-arrowRight"></i></a>
-              <ul class="sidebar-list__submenu">
+              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu" aria-label="Подменю">
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Категория товара</a>
                 </li>
@@ -210,8 +210,8 @@
               </ul>
             </li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#">Категория товара <i class="icon-arrowRight"></i></a>
-              <ul class="sidebar-list__submenu">
+              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu" aria-label="Подменю">
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Категория товара</a>
                 </li>
@@ -228,8 +228,8 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#">Категория товара <i class="icon-arrowRight"></i></a>
-              <ul class="sidebar-list__submenu">
+              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu" aria-label="Подменю">
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Категория товара</a>
                 </li>
@@ -446,7 +446,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=1726" defer></script>
-  <script src="../js/main.js?v=1726" defer></script>
+<script src="../js/vendors.js?v=1513" defer></script>
+  <script src="../js/main.js?v=1513" defer></script>
 </body>
 </html>
