deploy: cfbd6277de8284a48811bbd7cfd007f76a5bedec

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=1476">
+  <link rel="stylesheet" href="../css/main.css?v=1387">
 </head>
 
 <body class="page">
@@ -184,7 +184,7 @@
 
 <main class="page__content">
 
-<main class="home-container">
+<div class="home-container">
   <section class="home-intro">
     <div class="home-intro__container container">
       <div class="home-intro__left">
@@ -862,7 +862,7 @@
     </div>
   </section>  <section class="home-map">
     <div class="home-map__canvas js-ymap"></div>
-  </section></main>
+  </section></div>
 <!--Popups-->
 <div class="popup js-popup" data-popup-id="help-open">
   <div class="popup__wrapper">
@@ -996,7 +996,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=1476" defer></script>
-  <script src="../js/main.js?v=1476" defer></script>
+<script src="../js/vendors.js?v=1387" defer></script>
+  <script src="../js/main.js?v=1387" defer></script>
 </body>
 </html>
