deploy: a55e52bd4c4bc528ff78b540a34b452280aa0ff6

--- a/html/about.html
+++ b/html/about.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4316">
+  <link rel="stylesheet" href="../css/main.css?v=1628">
 </head>
 
 <body class="page">
@@ -197,7 +197,7 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара</a>
               <ul class="sidebar-list__submenu" aria-label="Подменю">
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Категория товара</a>
@@ -211,7 +211,7 @@
               </ul>
             </li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара</a>
               <ul class="sidebar-list__submenu" aria-label="Подменю">
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Категория товара</a>
@@ -229,7 +229,7 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+              <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара</a>
               <ul class="sidebar-list__submenu" aria-label="Подменю">
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Категория товара</a>
@@ -648,7 +648,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4316" defer></script>
-  <script src="../js/main.js?v=4316" defer></script>
+<script src="../js/vendors.js?v=1628" defer></script>
+  <script src="../js/main.js?v=1628" defer></script>
 </body>
 </html>
