deploy: 04c3ced795a76fd21ad43b56eb3e03017f8e922a

--- a/html/index.html
+++ b/html/index.html
@@ -438,7 +438,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">19 ноября 2020 г., 17:15</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">6 августа 2021 г., 09:53</span></span>
     </div>
   </footer>
 </div>
